# Distilled

./: .env.template  .eslintrc  .gitignore  .prettierrc.json  README.md  build-script.sh  cypress.config.ts  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  setup.sh  tsconfig.json
src/client/: .env.template  App.tsx  Dockerfile  env.d.ts  index.html  main.tsx  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  types.ts  vite.config.js
src/client/assets/: whiskeyTypes.json
src/client/components/Map/: DistilleryDrawer.tsx  DistilleryPopUp.tsx  MapPin.tsx  RenderMap.tsx  SearchBar.tsx
src/client/contexts/: AuthContext.tsx
src/client/hooks/: useClickOutside.tsx
src/client/services/: authService.ts  distilleryService.ts  entityService.ts  whiskeyService.ts
src/client/util/: apiClient.ts
src/client/validators/: comment_validator.ts  distillery_validator.ts  entity_validator.ts  rating_validator.ts  user_validator.ts  whiskey_validator.ts
src/server/: .env.template  Dockerfile  app.py  config.py  db.py  pyproject.toml  routes.py
src/server/Entities/: distillery_entity.py  user_entity.py  whiskey_entity.py
src/server/database/: init_db.py  models.py
src/server/dumps/: data.json
src/server/repositories/: distillery_repository.py  entity_repository.py  user_repository.py  whiskey_repository.py
src/server/services/: distillery_service.py  entity_service.py  user_service.py  whiskey_service.py
src/server/validators/: distillery_validators.py  entity_validators.py  user_validators.py  whiskey_validators.py
(+39 files in other folders)
